<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="l_name_initials_str"><![CDATA[Based on birth star <span style=\"color:#FF8C00;\"><strong> %1$s </strong></span> following Swars for name initials are recommended : <span style=\"color:#FF8C00;\"><strong>%2$s </strong></span>]]></string>
   <string name="e_name_initials_str"><![CDATA[Based on birth star <span style=\"color:#FF8C00;\"><strong> %1$s </strong></span> following Swars for name initials are recommended : <span style=\"color:#FF8C00;\"><strong>%2$s </strong></span>]]></string>
    <string name="l_pitru_dosha">Pitru Dosh</string>
    <string name="e_pitru_dosha">Pitru Dosh</string>
    <string name="l_yoga_header">%1$s Auspicious Days</string>
    <string name="e_yoga_header">%1$s Auspicious Days</string>
    <string name="l_kala_sarpa_dosha">Kala Sarpa Yoga</string>
    <string name="e_kala_sarpa_dosha">Kala Sarpa Yoga</string>
   <string name="l_nakshetra_pada">pada</string>
    <string name="e_nakshetra_pada">pada</string>
    <string name="e_good">Good</string>
    <string name="e_bad">Bad - Puja needed</string>
    <string name="e_worst">Very Bad</string>
    <string name="clear_cache">1</string>
    <string name="l_good">Good</string>
    <string name="l_bad">Bad - Puja needed</string>
    <string name="l_worst">Very Bad</string>
    <string-array name="l_arr_choghadiya_day">

        <item>Udvega(Bad)</item>
        <item>Chara(Neutral)</item>
        <item>Labha(Gain)</item>
        <item>Amrita(Best)</item>
        <item>Kala(Loss)</item>
        <item>Shubha(Good)</item>
        <item>Roga(Evil)</item>
    </string-array>
    <string-array name="e_arr_choghadiya_day">

        <item>Udvega(Bad)</item>
        <item>Chara(Neutral)</item>
        <item>Labha(Gain)</item>
        <item>Amrita(Best)</item>
        <item>Kala(Loss)</item>
        <item>Shubha(Good)</item>
        <item>Roga(Evil)</item>
    </string-array>
    <string-array name="l_arr_choghadiya_night">

        <item>Shubha(Good)</item>
        <item>Amrita(Best)</item>
        <item>Chara(Neutral)</item>
        <item>Roga(Evil)</item>
        <item>Kala(Loss)</item>
        <item>Labha(Gain)</item>
        <item>Udvega(Bad)</item>
    </string-array>
    <string-array name="e_arr_choghadiya_night">

        <item>Shubha(Good)</item>
        <item>Amrita(Best)</item>
        <item>Chara(Neutral)</item>
        <item>Roga(Evil)</item>
        <item>Kala(Loss)</item>
        <item>Labha(Gain)</item>
        <item>Udvega(Bad)</item>
    </string-array>
    <string-array name="l_arr_hora">
        <item>Sun</item>
        <item>Venus</item>
        <item>Mercury</item>
        <item>Moon</item>
        <item>Saturn</item>
        <item>Jupiter</item>
        <item>Mars</item>
    </string-array>
    <string-array name="e_arr_hora">
        <item>Sun</item>
        <item>Venus</item>
        <item>Mercury</item>
        <item>Moon</item>
        <item>Saturn</item>
        <item>Jupiter</item>
        <item>Mars</item>
    </string-array>
    <string-array name="l_arr_tarabalam">
        <item>Parama Mitra Tara(Good)</item>
        <item>Janma Tara(Not Good)</item>
        <item>Sampat Tara(Very Good)</item>
        <item>Vipat Tara(Bad)</item>
        <item>Kshema Tara(Good)</item>
        <item>Pratyak Tara(Not Good)</item>
        <item>Saadhana Tara(Very Good)</item>
        <item>Naidhana Tara(Totally Bad)</item>
        <item>Mitra Tara(Good)</item>

    </string-array>
    <string-array name="e_arr_tarabalam">
        <item>Parama Mitra Tara(Good)</item>
        <item>Janma Tara(Not Good)</item>
        <item>Sampat Tara(Very Good)</item>
        <item>Vipat Tara(Bad)</item>
        <item>Kshema Tara(Good)</item>
        <item>Pratyak Tara(Not Good)</item>
        <item>Saadhana Tara(Very Good)</item>
        <item>Naidhana Tara(Totally Bad)</item>
        <item>Mitra Tara(Good)</item>

    </string-array>
    <string name="isNightMode">0</string>
    <string name="l_celcious">C</string>
    <string name="e_celcious">C</string>
    <string name="l_button_rashi">Horoscope</string>
    <string name="l_button_news">Media</string>
    <string name="l_button_event">Events</string>
    <string name="l_button_prayer">Aradhana</string>
    <string name="e_button_rashi">Horoscope</string>
    <string name="e_button_news">Media</string>
    <string name="e_button_event">Events</string>
    <string name="e_button_prayer">Aradhana</string>
    <string name="alert_fill_gas">You filled &#188; tank. Your tank is now %1$d/4 full!</string>
    <string name="alert_error_consuming">Error while consuming: %1$s</string>
    <string name="alert_already_purchased">Thanks, You have already paid for this.</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display&#8230; Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="button_buy">Buy</string>
    <string name="button_own">Own</string>
    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_omg">Jyotish</string>
    <string-array name="tab_home">
        <item>Today</item>
        <item>OnThisDay</item>
        <item>Horoscope</item>
    </string-array>
    <string-array name="tab_omg">
        <item>Today Updates</item>
        <item>Prayer</item>
    </string-array>
    <string name="app_not_found" translatable="false">Sorry, App not found.</string>
    <string name="share_title" translatable="false">Panchanga Darpana - Android App on Google Play</string>
    <string name="share_desc" translatable="false">Panchanga Darpana, provides information for calendar related information &amp; Panchanga details.</string>
    <string name="refresh" translatable="false">Seems something wrong!\n Please check connection &amp; tap here.</string>
    <string name="no_result" translatable="false">Seems something wrong!\n No result found yet.</string>
    <string name="version" translatable="false">Version-</string>
    <string name="internet_required" translatable="false">Internet require to update app.</string>
    <string name="no_internet" translatable="false">Please check internet.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="code_bengali" translatable="false">bn</string>
    <string name="code_gujarati" translatable="false">gu</string>
    <string name="code_hindi" translatable="false">hi</string>
    <string name="code_kannada" translatable="false">kn</string>
    <string name="code_malayalam" translatable="false">ml</string>
    <string name="code_marathi" translatable="false">mr</string>
    <string name="code_odia" translatable="false">or</string>
    <string name="code_punjabi" translatable="false">pa</string>
    <string name="code_tamil" translatable="false">ta</string>
    <string name="code_telugu" translatable="false">te</string>
    <string name="code_english" translatable="false">en</string>
    <string name="lang_bengali" translatable="false">বাংলা </string>
    <string name="lang_gujarati" translatable="false">ગુજરાતી </string>
    <string name="lang_hindi" translatable="false">हिंदी </string>
    <string name="lang_kannada" translatable="false">ಕನ್ನಡ </string>
    <string name="lang_malayalam" translatable="false">മലയാളം </string>
    <string name="lang_marathi" translatable="false">मराठी </string>
    <string name="lang_odia" translatable="false">ଓଡ଼ିଆ </string>
    <string name="lang_punjabi" translatable="false">ਪੰਜਾਬੀ </string>
    <string name="lang_tamil" translatable="false">தமிழ் </string>
    <string name="lang_telugu" translatable="false">తెలుగు </string>
    <string name="action_odia" translatable="false">ଓଡ଼ିଆ କ୍ୟାଲେଣ୍ଡର</string>
    <string name="en_action_bengali" translatable="false">বাংলা (Bangla)</string>
    <string name="en_action_gujarati" translatable="false">ગુજરાતી (Gujarati)</string>
    <string name="en_action_hindi" translatable="false">हिंदी (Hindi)</string>
    <string name="en_action_kannada" translatable="false">ಕನ್ನಡ (Kannada)</string>
    <string name="en_action_malayalam" translatable="false">മലയാളം (Malayalam)</string>
    <string name="en_action_marathi" translatable="false">मराठी (Marathi)</string>
    <string name="en_action_odia" translatable="false">ଓଡ଼ିଆ (Odia)</string>
    <string name="en_action_punjabi" translatable="false">ਪੰਜਾਬੀ  (Punjabi)</string>
    <string name="en_action_tamil" translatable="false">தமிழ் (Tamil)</string>
    <string name="en_action_telugu" translatable="false">తెలుగు (Telugu)</string>
    <string name="en_action_english" translatable="false">English</string>
    <string-array name="e_arr_month" translatable="false">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October </item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="e_arr_month_short" translatable="false">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="l_grahabhoga">GRAHABHOGA</string>
    <string name="l_arambha">START</string>
    <string name="l_sesha">END</string>
    <string name="l_menu_settings">Settings</string>
    <string name="l_menu_panchanga">Panchanga</string>
    <string name="l_menu_calendar">Calendar</string>
    <string name="l_menu_festivals">Festivals</string>
    <string name="l_menu_horoscope">Horoscope</string>
    <string name="l_menu_weather">Weather</string>
    <string name="l_menu_sun_moon">Sun Moon</string>
    <string name="l_menu_vedic_time">Vedic Time</string>
    <string name="l_menu_wall_calendar">Wall Calendar</string>
    <string name="l_menu_janma_kundali">Janma Kundali</string>
    <string name="l_menu_kundali_milana">Kundali Milana</string>
    <string name="l_menu_planet">Planet</string>
    <string name="l_menu_category">Category</string>
    <string name="l_menu_national">National</string>
    <string name="l_menu_international">International</string>
    <string name="l_menu_observance">Observance</string>
    <string name="l_menu_aradhana">Aradhana</string>
    <string name="l_menu_on_this_day">On This Day</string>
    <string name="l_menu_media">Media</string>
    <string name="l_menu_add_event">Add Event</string>
    <string name="l_menu_birth_anniversary">Vedic Birthday </string>
    <string name="l_menu_death_anniversary">Vedic Death day</string>
    <string name="l_menu_other_anniversary">Other Event day</string>
    <string name="l_menu_remove_ads">Remove Ads</string>
    <string name="l_menu_rate_app">Rate App</string>
    <string name="l_menu_share">Share</string>
    <string name="l_menu_feedback">Feedback</string>
    <string name="l_menu_privacy_policy">Privacy Policy</string>
</resources>