<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/colorBackgroundFloating"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"

        >
        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="Regional Language"
            android:textStyle="bold"
             />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="?attr/divider" />
        <RadioGroup
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/cardBackgroundColor"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="10dp">


            <RadioButton
                android:id="@+id/lang_bengali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_action_bengali"
              
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                />

            <RadioButton
                android:id="@+id/lang_gujarati"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_gujarati" />

            <RadioButton
                android:id="@+id/lang_hindi"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_hindi" />

            <RadioButton
                android:id="@+id/lang_kannada"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_kannada" />

            <RadioButton
                android:id="@+id/lang_malayalam"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_malayalam" />

            <RadioButton
                android:id="@+id/lang_marathi"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_marathi" />

            <RadioButton
                android:id="@+id/lang_odia"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_odia" />

            <RadioButton
                android:id="@+id/lang_punjabi"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_punjabi" />

            <RadioButton
                android:id="@+id/lang_tamil"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_tamil" />

            <RadioButton
                android:id="@+id/lang_telugu"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_telugu" />

            <RadioButton
                android:id="@+id/lang_english"
              
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
               android:layout_marginBottom="5dp"
               android:layout_marginTop="5dp"
                android:text="@string/en_action_english" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="?attr/divider" />
        <TextView
            android:id="@+id/cancel"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="Cancel"
            android:textColor="?attr/colorAccent" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>