<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:background="?attr/colorBackgroundFloating"
        android:textColor="?attr/colorAccent"
        android:gravity="center"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nakshetra"
        android:textStyle="bold"
        android:padding="2dp"/>
    <LinearLayout
        android:background="?attr/colorBackgroundFloating"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <TextView
            android:id="@+id/title1"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/l_grahabhoga"
           />
        <TextView
            android:id="@+id/title2"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/l_arambha" />
        <TextView
            android:id="@+id/title3"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/l_sesha" />

    </LinearLayout>
    <LinearLayout
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="Nakshetra" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="Nakshetra" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="Nakshetra" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/divider"

        />
</LinearLayout>